[package]
name = "narth-net"
version = "0.1.0"
edition = "2024"
rust-version = "1.93.0"

[dependencies]
tun-rs = { version = "2.8.3", default-features = false, features = [] }
bitmatch = { version = "0.1.1" }
internet-checksum = "0.2.1"
fastrand = "2.4.1"
ipnet = { version = "2.12.0", features = ["std"] }
bytes = { version = "1.11.1" }
thiserror = "2.0.18"
