[package]
name = "narth-net-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
narth_net = { package = "narth-net", path = "../lib" }

tun-rs = { version = "2.8.3", default-features = false, features = [] }

# Tracing ecosystem
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-opentelemetry = { version = "0.33.0", default-features = false }
opentelemetry-appender-tracing = { version = "0.32.0", default-features = false, features = ["experimental_span_attributes"] }

opentelemetry = { version = "0.32.0", default-features = false, features = ["trace", "logs"] }
opentelemetry_sdk = { version = "0.32.1", default-features = false, features = ["trace", "logs"] }
opentelemetry-otlp = { version = "0.32.0", features = ["http-proto", "reqwest-blocking-client", "trace", "logs"] }
